# notty

./: .gitignore  CLAUDE.md  MOBILE.md  index.html  opencode.json  package-lock.json  package.json
.cursor/: cli.json  mcp.json
.gemini/: settings.json
migrations/meta/: 0000_snapshot.json  _journal.json
scripts/: bundle-env.ts  fix-ios-icons.py  qa-publish-race.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/client/: main.tsx
src/client/pages/: auth-passkey.tsx  home.tsx  note.tsx  quick-note.tsx  trash.tsx
src/client/pages/mobile/: mobile-home.tsx  mobile-note.tsx  mobile-search.tsx  mobile-settings.tsx  mobile-trash.tsx
src/components/: app-layout.tsx  editor-extensions.tsx  editor.tsx  note-file-list.tsx  note-history.tsx  publish-toggle.tsx  quick-note-corner-setup.tsx  quick-note-corner.tsx  sidebar.tsx  sync-status.tsx
src/components/mobile/: mobile-auth.tsx  mobile-shell.tsx  new-folder-sheet.tsx
src/context/: adapter-context.tsx  auth-context.tsx  folders-context.tsx  media-context.tsx  notes-context.tsx
src/durable-objects/: auth.ts  user-notes.ts
src/lib/: adapter.ts  auth-helpers.ts  desktop-adapter.ts  image-upload.ts  mobile-adapter.ts  note-file-utils.ts  note-flush.ts  note-preview.ts  platform.ts  use-edge-swipe-back.ts  web-adapter.ts  yjs-provider.ts
src/server/: index.ts  public-page.ts  rss.ts
src/styles/: globals.css
